big round of edits, and new diagrams

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
@@ -26,7 +26,7 @@
 \maketitle
 
 \begin{abstract}
-Homotopy type theory captures all the major concepts of differential geometry including connections, curvature, and gauge theory. We show this by focusing on combinatorial manifolds, which are discrete in the sense of real cohesion\cite{shulman_cohesion}, and drawing inspiration from the field of discrete differential geometry. We prove the Gauss-Bonnet theorem and Poincaré-Hopf theorem in two dimensions.
+Homotopy type theory can capture some of the major concepts of differential geometry including connections, curvature, and vector fields. We show this by focusing on combinatorial manifolds, which are discrete in the sense of real cohesion\cite{shulman_cohesion}, and drawing inspiration from the field of discrete differential geometry. We prove the Gauss-Bonnet theorem and Poincaré-Hopf theorem in two dimensions.
 
 \end{abstract}
 
