--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
@@ -36,7 +36,7 @@
 
 \graphicspath{ {./img/} }
 
-\usetikzlibrary{arrows,positioning,quotes,cd}
+\usetikzlibrary{arrows,positioning,quotes,cd,calc,shapes,decorations.pathreplacing}
 
 \bibliographystyle{IEEEtran} % shows URL
 \setcitestyle{square,numbers}
@@ -78,6 +78,7 @@
 \newcommand{\pp}{\ensuremath{\mathcal{P}_1}}
 \newcommand{\two}{\ensuremath{\mathbb{2}}}
 \newcommand{\oo}{\ensuremath{\mathbb{O}}}
+\newcommand{\mm}{\ensuremath{\mathbb{M}}}
 \newcommand{\const}{\ensuremath{\mathrm{const}}}
 \newcommand{\join}{\ensuremath{*}}
 
@@ -92,7 +93,11 @@
 \newcommand{\zz}{\ensuremath{\mathbb{Z}}}
 \newcommand{\vvv}{\ensuremath{\mathbb{V}}}
 \newcommand{\cinfty}{\ensuremath{C^{\infty}}}
-\newcommand{\ctmfd}{\mathsf{Comb2Mfd}}
+\newcommand{\combmfdt}{\mathsf{CombMfd_2}}
+\newcommand{\combmfd}{\mathsf{CombMfd_n}}
+\newcommand{\combmfdset}{\mathsf{CombMfdSet_n}}
+\newcommand{\simcomp}{\mathsf{SimCompSet_n}}
+\newcommand{\simcompt}{\mathsf{SimCompSet_2}}
 \newcommand{\smfd}{\mathsf{SmoothMfd}}
 \newcommand{\calg}{\mathsf{CAlg}_{\rr}}
 \newcommand{\cart}{\mathsf{CartSp}}
