a long day of edits

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/connections.bib
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/connections.bib
@@ -575,3 +575,13 @@ url = {{https://www.cs.cmu.edu/~kmcrane/Projects/DDG/}},
   year = {2015},
   note = {Accessed: {2024–11-01}}
 }
+
+@misc{warn_pushouts,
+      title={Path spaces of pushouts}, 
+      author={David Wärn},
+      year={2024},
+      eprint={2402.12339},
+      archivePrefix={arXiv},
+      primaryClass={math.AT},
+      url={https://arxiv.org/abs/2402.12339}, 
+}
