--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
@@ -36,8 +36,7 @@
 
 \graphicspath{ {./img/} }
 
-\usetikzlibrary{arrows,positioning,quotes,cd,calc,shapes,decorations.pathreplacing}
-
+\usetikzlibrary{arrows,arrows.meta,positioning,quotes,cd,calc,shapes,decorations.pathreplacing}
 \bibliographystyle{IEEEtran} % shows URL
 \setcitestyle{square,numbers}
 
@@ -96,8 +95,9 @@
 \newcommand{\combmfdt}{\mathsf{CombMfd_2}}
 \newcommand{\combmfd}{\mathsf{CombMfd_n}}
 \newcommand{\combmfdset}{\mathsf{CombMfdSet_n}}
-\newcommand{\simcomp}{\mathsf{SimCompSet_n}}
-\newcommand{\simcompt}{\mathsf{SimCompSet_2}}
+\newcommand{\combmfdsett}{\mathsf{CombMfdSet_2}}
+\newcommand{\simcomp}{\mathsf{SimpCompSet_n}}
+\newcommand{\simcompt}{\mathsf{SimpCompSet_2}}
 \newcommand{\smfd}{\mathsf{SmoothMfd}}
 \newcommand{\calg}{\mathsf{CAlg}_{\rr}}
 \newcommand{\cart}{\mathsf{CartSp}}
@@ -118,7 +118,8 @@
 \DeclareMathOperator{\BAut}{BAut}
 \DeclareMathOperator{\ad}{ad}
 \DeclareMathOperator{\Ad}{Ad}
-\newcommand{\apd}{\mathrm{apd}}
+\newcommand{\apd}{\mathsf{apd}}
+\newcommand{\HIT}{\mathsf{HIT}}
 \newcommand{\BAuto}[1]{\BAut_1(#1)}
 \newcommand{\so}{S^1}
 \newcommand{\BAutoso}{\BAuto{S^1}}
@@ -188,7 +189,7 @@
 \newcommand{\dottol}[1]{\stackrel{#1}{\dotto}}
 \newcommand{\icol}[2]{{{#1} \choose {#2}}}
 \newcommand{\twist}[2]{{#1}^{\circlearrowleft {#2}}}
-\newcommand{\tr}{\mathrm{tr}}
+\newcommand{\tr}{\mathsf{tr}}
 \newcommand{\Inn}{\mathrm{Inn}}
 \newcommand{\shapez}{\shape{}_{0}}
 \newcommand{\shapeo}{\shape{}_{1}}
@@ -210,7 +211,8 @@
 \newcommand{\Aa}{\mathscr{A}}
 \newcommand{\Bb}{\mathscr{B}}
 \newcommand{\pathover}[1]{\xrightarrow[{#1}]{=}}
-
+\newcommand{\Xspin}{X_{\mathrm{spin}}}
+\newcommand{\Xdown}{X_{\mathrm{down}}}
 \newtheoremstyle{mythmstyle}
 {5pt} % Space above
 {-4pt} % Space below
@@ -221,10 +223,10 @@
 {.5em} % Space after theorem head
 {} % Theorem head spec (can be left empty, meaning `normal')
 \theoremstyle{mythmstyle}
-\newtheorem{mydef}{Definition}
-\newtheorem{mythm}{Theorem}
-\newtheorem{mylemma}{Lemma}
-\newtheorem{mycor}{Corollary}
-\newtheorem{myprop}{Proposition}
-\newtheorem{myclaim}{Claim}
-\newtheorem{mynote}{Note}
+\newtheorem{mydef}{Definition}[section]
+\newtheorem{mythm}{Theorem}[section]
+\newtheorem{mylemma}{Lemma}[section]
+\newtheorem{mycor}{Corollary}[section]
+\newtheorem{myprop}{Proposition}[section]
+\newtheorem{myclaim}{Claim}[section]
+\newtheorem{mynote}{Note}[section]
