another full day of changes and new ideas

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/connections.bib
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/connections.bib
@@ -374,6 +374,21 @@ a kind of cohesive motives.},
       primaryClass={math.AT}
 }
 
+@article{buchholtz_favonia,
+  author       = {Ulrik Buchholtz and
+                  Kuen{-}Bang Hou (Favonia)},
+  title        = {Cellular Cohomology in Homotopy Type Theory},
+  journal      = {CoRR},
+  volume       = {abs/1802.02191},
+  year         = {2018},
+  url          = {http://arxiv.org/abs/1802.02191},
+  eprinttype    = {arXiv},
+  eprint       = {1802.02191},
+  timestamp    = {Thu, 22 Sep 2022 10:32:08 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-1802-02191.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
 @book {kirby_siebenmann,
 	AUTHOR = {Kirby, Robion C. and Siebenmann, Laurence
 		 C.},
