--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_torus_spin_tikz.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_torus_spin_tikz.tex
@@ -1,77 +1,77 @@
 \begin{tikzcd}[column sep=1ex,row sep=1ex]
   & {\mathrm{outer}} & {\mathrm{back}} & {\mathrm{hole}} & {\mathrm{front}} & {\mathrm{outer}} \\
   & {\ } & \bullet & {\ } & \bullet & {\ } \\
-  {\mathrm{top\ of\ diamonds}} & {} && {} && {} \\
+  {\mathrm{top\ of\ diamonds}} & {\bullet} && {\bullet} && {\bullet} \\
   && \bullet && \bullet \\
   & \bullet && \bullet && \bullet \\
   && \bullet && \bullet \\
-  {\mathrm{bottom\ of\ diamonds}} & {} && {} && {} \\
+  {\mathrm{bottom\ of\ diamonds}} & {\bullet} && {\bullet} && {\bullet} \\
   && \bullet && \bullet \\
   & \bullet && \bullet && \bullet \\
   && \bullet && \bullet \\
-  {\mathrm{top\ of\ diamonds}} & {} && {} && {}
+  {\mathrm{top\ of\ diamonds}} & {\bullet} && {\bullet} && {\bullet}
   \arrow[dotted, from=1-2, to=2-2]
   \arrow[dotted, from=1-3, to=2-3]
   \arrow[dotted, from=1-4, to=2-4]
   \arrow[dotted, from=1-5, to=2-5]
   \arrow[dotted, from=1-6, to=2-6]
-  \arrow[draw={rgb,255:red,60;green,73;blue,246}, no head, from=2-3, to=3-2]
-  \arrow[draw={rgb,255:red,60;green,73;blue,246}, from=2-3, to=3-4, line width=.5mm, -Latex]
-  \arrow[no head, from=2-3, to=4-3]
-  \arrow[draw={rgb,255:red,250;green,59;blue,56}, from=2-5, to=3-4, line width=.5mm, -Latex]
-  \arrow[draw={rgb,255:red,250;green,59;blue,56}, no head, from=2-5, to=3-6]
   \arrow[dotted, from=3-1, to=3-2]
+  \arrow[dotted, from=7-1, to=7-2]
+  \arrow[dotted, from=11-1, to=11-2]
+  \arrow[draw={rgb,255:red,60;green,73;blue,246}, no head, from=2-3, to=3-2]
+  \arrow[draw={rgb,255:red,60;green,73;blue,246}, no head, from=2-3, to=3-4]
+  \arrow[line width=.5mm, Latex-, from=2-3, to=4-3]
+  \arrow[draw={rgb,255:red,250;green,59;blue,56}, no head, from=2-5, to=3-4]
+  \arrow[draw={rgb,255:red,250;green,59;blue,56}, no head, from=2-5, to=3-6]
   \arrow[draw={rgb,255:red,60;green,73;blue,246}, no head, from=3-2, to=4-3]
-  \arrow[no head, from=3-2, to=5-2]
-  \arrow[draw={rgb,255:red,60;green,73;blue,246}, tail reversed, no head, from=3-4, to=4-3, line width=.5mm, Latex-]
-  \arrow[draw={rgb,255:red,250;green,59;blue,56}, tail reversed, no head, from=3-4, to=4-5, line width=.5mm, Latex-]
-  \arrow[no head, from=3-4, to=5-4]
+  \arrow[line width=.5mm, Latex-, from=3-2, to=5-2]
+  \arrow[draw={rgb,255:red,60;green,73;blue,246}, no head, from=3-4, to=4-3]
+  \arrow[draw={rgb,255:red,250;green,59;blue,56}, no head, from=3-4, to=4-5]
+  \arrow[line width=.5mm, Latex-, from=3-4, to=5-4]
   \arrow[draw={rgb,255:red,250;green,59;blue,56}, no head, from=3-6, to=4-5]
   \arrow[draw={rgb,255:red,60;green,73;blue,246}, no head, from=4-3, to=5-2]
   \arrow[draw={rgb,255:red,60;green,73;blue,246}, no head, from=4-3, to=5-4]
-  \arrow[no head, from=4-3, to=6-3]
-  \arrow[no head, from=4-5, to=2-5]
+  \arrow[line width=.5mm, Latex-, from=4-3, to=6-3]
+  \arrow[line width=.5mm, -Latex, from=4-5, to=2-5]
   \arrow[draw={rgb,255:red,250;green,59;blue,56}, no head, from=4-5, to=5-4]
   \arrow[draw={rgb,255:red,250;green,59;blue,56}, no head, from=4-5, to=5-6]
   \arrow[draw={rgb,255:red,60;green,73;blue,246}, no head, from=5-2, to=6-3]
-  \arrow[from=5-2, to=7-2, line width=.5mm, -Latex]
+  \arrow[line width=.5mm, Latex-, from=5-2, to=7-2]
   \arrow[draw={rgb,255:red,60;green,73;blue,246}, no head, from=5-4, to=6-3]
   \arrow[draw={rgb,255:red,250;green,59;blue,56}, no head, from=5-4, to=6-5]
-  \arrow[from=5-4, to=7-4, line width=.5mm, -Latex]
-  \arrow[no head, from=5-6, to=3-6]
+  \arrow[line width=.5mm, Latex-, from=5-4, to=7-4]
+  \arrow[line width=.5mm, -Latex, from=5-6, to=3-6]
   \arrow[draw={rgb,255:red,250;green,59;blue,56}, no head, from=5-6, to=6-5]
-  \arrow[draw={rgb,255:red,60;green,73;blue,246}, from=6-3, to=7-2, line width=.5mm, -Latex]
+  \arrow[draw={rgb,255:red,60;green,73;blue,246}, no head, from=6-3, to=7-2]
   \arrow[draw={rgb,255:red,60;green,73;blue,246}, no head, from=6-3, to=7-4]
-  \arrow[no head, from=6-3, to=8-3]
-  \arrow[no head, from=6-5, to=4-5]
+  \arrow[line width=.5mm, Latex-, from=6-3, to=8-3]
+  \arrow[line width=.5mm, -Latex, from=6-5, to=4-5]
   \arrow[draw={rgb,255:red,250;green,59;blue,56}, no head, from=6-5, to=7-4]
-  \arrow[draw={rgb,255:red,250;green,59;blue,56}, from=6-5, to=7-6, line width=.5mm, -Latex]
-  \arrow[dotted, from=7-1, to=7-2]
-  \arrow[draw={rgb,255:red,60;green,73;blue,246}, tail reversed, no head, from=7-2, to=8-3, line width=.5mm, Latex-]
-  \arrow[tail reversed, no head, from=7-2, to=9-2, line width=.5mm, Latex-]
+  \arrow[draw={rgb,255:red,250;green,59;blue,56}, no head, from=6-5, to=7-6]
+  \arrow[draw={rgb,255:red,60;green,73;blue,246}, no head, from=7-2, to=8-3]
+  \arrow[line width=.5mm, Latex-, from=7-2, to=9-2]
   \arrow[draw={rgb,255:red,60;green,73;blue,246}, no head, from=7-4, to=8-3]
   \arrow[draw={rgb,255:red,250;green,59;blue,56}, no head, from=7-4, to=8-5]
-  \arrow[tail reversed, no head, from=7-4, to=9-4, line width=.5mm, Latex-]
-  \arrow[tail reversed, no head, from=7-6, to=5-6, line width=.5mm, Latex-]
-  \arrow[draw={rgb,255:red,250;green,59;blue,56}, tail reversed, no head, from=7-6, to=8-5, line width=.5mm, Latex-]
+  \arrow[line width=.5mm, Latex-, from=7-4, to=9-4]
+  \arrow[line width=.5mm, -Latex, from=7-6, to=5-6]
+  \arrow[draw={rgb,255:red,250;green,59;blue,56}, no head, from=7-6, to=8-5]
   \arrow[draw={rgb,255:red,60;green,73;blue,246}, no head, from=8-3, to=9-2]
   \arrow[draw={rgb,255:red,60;green,73;blue,246}, no head, from=8-3, to=9-4]
-  \arrow[no head, from=8-3, to=10-3]
-  \arrow[no head, from=8-5, to=6-5]
+  \arrow[line width=.5mm, Latex-, from=8-3, to=10-3]
+  \arrow[line width=.5mm, -Latex, from=8-5, to=6-5]
   \arrow[draw={rgb,255:red,250;green,59;blue,56}, no head, from=8-5, to=9-4]
   \arrow[draw={rgb,255:red,250;green,59;blue,56}, no head, from=8-5, to=9-6]
-  \arrow[no head, from=8-5, to=10-5]
+  \arrow[line width=.5mm, Latex-, from=8-5, to=10-5]
   \arrow[draw={rgb,255:red,60;green,73;blue,246}, no head, from=9-2, to=10-3]
-  \arrow[no head, from=9-2, to=11-2]
+  \arrow[line width=.5mm, Latex-, from=9-2, to=11-2]
   \arrow[draw={rgb,255:red,60;green,73;blue,246}, no head, from=9-4, to=10-3]
-  \arrow[no head, from=9-4, to=11-4]
-  \arrow[from=9-6, to=7-6, line width=.5mm, -Latex]
-  \arrow[no head, from=9-6, to=11-6]
+  \arrow[line width=.5mm, Latex-, from=9-4, to=11-4]
+  \arrow[line width=.5mm, -Latex, from=9-6, to=7-6]
+  \arrow[line width=.5mm, Latex-, from=9-6, to=11-6]
   \arrow[draw={rgb,255:red,60;green,73;blue,246}, no head, from=10-3, to=11-2]
-  \arrow[draw={rgb,255:red,60;green,73;blue,246}, from=10-3, to=11-4, line width=.5mm, -Latex]
+  \arrow[draw={rgb,255:red,60;green,73;blue,246}, no head, from=10-3, to=11-4]
   \arrow[draw={rgb,255:red,250;green,59;blue,56}, no head, from=10-5, to=9-4]
   \arrow[draw={rgb,255:red,250;green,59;blue,56}, no head, from=10-5, to=9-6]
-  \arrow[draw={rgb,255:red,250;green,59;blue,56}, from=10-5, to=11-4, line width=.5mm, -Latex]
+  \arrow[draw={rgb,255:red,250;green,59;blue,56}, no head, from=10-5, to=11-4]
   \arrow[draw={rgb,255:red,250;green,59;blue,56}, no head, from=10-5, to=11-6]
-  \arrow[dotted, from=11-1, to=11-2]
 \end{tikzcd}
