renamed a file, wrote more, and printed this version out for editing

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
@@ -26,8 +26,7 @@
 \maketitle
 
 \begin{abstract}
-Homotopy type theory can capture some of the major concepts of differential geometry including connections, curvature, and vector fields. We show this by focusing on combinatorial manifolds, which are discrete in the sense of real cohesion\cite{shulman_cohesion}, and drawing inspiration from the field of discrete differential geometry. We prove the Gauss-Bonnet theorem and Poincaré-Hopf theorem in two dimensions.
-
+Homotopy type theory can capture some concepts of differential geometry in two dimensions including connections, curvature, and vector fields. We show this by focusing on combinatorial manifolds, which are discrete in the sense of real cohesion\cite{shulman_cohesion}, and drawing inspiration from the field of discrete differential geometry. We prove the Gauss-Bonnet theorem and Poincaré-Hopf theorem in this setting.
 \end{abstract}
 
 \begin{quote} 
@@ -43,7 +42,7 @@ Homotopy type theory can capture some of the major concepts of differential geom
 
 \input{discrete_gauge_theory_connections}
 
-\input{discrete_gauge_theory_poincare_hopf}
+\input{discrete_gauge_theory_ap_is_d}
 
 \bibliography{connections}
 \end{document}
